src/styles/common.css
/* ... */
body.dark .tooltip::after,
body.dark .micro-muted-tooltip::after {
  @apply bg-dark-secondary2;
}

.tooltip-left::before {
  left: 24px !important;
  right: auto !important;
}

html[dir='rtl'] span.tooltip.tooltip-left {
  right: -34px !important;
  left: auto !important;
}

html[dir='rtl'] span.tooltip.tooltip-left::before {
  left: auto !important;
  right: 45px !important;
}

.has-tooltip:hover .tooltip {
  @apply visible z-[9];
}

#main-footer .record {
  animation-name: pulse2;
  animation-duration: 1.5s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

.Toastify__toast-container {
  @apply z-999999;
}

.Toastify__toast-body {
  @apply m-0 font-light;
}

.vertical-webcams .all-webcam-wrapper-inner .video-camera-item {
  @apply h-[calc(33.33%-10px)] my-2 mx-0;
}

.share-screen-wrapper.is-share-screen-running .screen-share-video {
  @apply h-full w-full;
}
.share-screen-wrapper.is-share-screen-running
  .screen-share-video
  video.video-player {
  @apply h-[calc(100%-30px)] w-[calc(100%-30px)] top-[15px] left-[15px];
}

.footer-podcast-button {
  @apply relative;
}
.footer-podcast-button .lds-ripple {
  @apply absolute w-[30px] h-[30px] left-2;
}
.footer-podcast-button .lds-ripple div {
  @apply border-2 border-solid border-[rgb(0,77,144)];
  -webkit-animation: lds-ripple2 0.8s cubic-bezier(0, 0.2, 0.8, 1) infinite;
  animation: lds-ripple2 0.8s cubic-bezier(0, 0.2, 0.8, 1) infinite;
}
.footer-podcast-button .lds-ripple div:last-child {
  -webkit-animation-delay: -0.3s;
  animation-delay: -0.3s;
}

.media-player-inner {
  position: relative;
  width: 100% !important;
  height: inherit !important;
}
.media-player-inner > div {
  height: inherit !important;
  margin: auto;
}
.media-player-inner > div > div {
  @apply overflow-hidden !pb-[56.25%] relative !w-full !h-0;
}
.media-player-inner > div > div .video-js {
  @apply !absolute !w-full !h-full left-0 top-0;
}
.media-player-inner iframe {
  @apply left-0 top-0 h-full w-full absolute;
}

.is-pc .media-player-inner > div {
  width: 100% !important;
}

.range {
  @apply appearance-none align-middle outline-hidden border-none p-0 bg-transparent w-full;
}
.range::-webkit-slider-runnable-track {
  background-color: rgba(128, 128, 128, 0.5);
  height: 10px;
  border-radius: 5px;
  border: 1px solid transparent;
  @apply bg-[rgba(128,128,128,0.5)] dark:bg-secondary-color/90 h-[10px] rounded-[5px] border border-solid border-transparent;
}
.range::-moz-range-track {
  @apply bg-[rgba(128,128,128,0.5)] dark:bg-secondary-color/90 h-[10px] rounded-[5px] border border-solid border-transparent;
}
.range::-webkit-slider-thumb {
  @apply appearance-none rounded-full bg-primary-color dark:bg-white h-[18px] w-[18px] -mt-[5px];
}
.range::-moz-range-thumb {
  @apply rounded-[20px] h-[18px] w-[18px] border-none bg-primary-color;
}
.range:active::-webkit-slider-thumb {
  @apply outline-hidden;
}
.range:active::-moz-range-thumb {
  @apply outline-hidden;
}

.showParticipantsPanel .active-speakers-wrap {
  @apply z-2;
}

.showChatPanel .active-speakers-wrap {
  @apply z-2;
}

.breakout-room-list-item .timer {
  border-color: #fff;
  color: #fff;
  border-radius: 8px;
  margin-left: 5px;
}

.react-js-player-wrap .video-js {
  padding-top: 0 !important;
}
.react-js-player-wrap .video-js button.vjs-big-play-button {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.excalidraw canvas.excalidraw__canvas.static {
  width: 100% !important;
}
.excalidraw canvas.excalidraw__canvas.interactive {
  width: 100% !important;
}

.excalidraw.excalidraw-modal-container {
  z-index: 99999 !important;
}

.landscape-device.is-mobile #main-area.fullWidthMainArea .share-screen-wrapper {
  @apply h-full;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .notepad-wrapper {
  @apply h-[94%] top-[3%] relative mt-0;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .externalMediaPlayerWrapper {
  @apply h-full;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .externalMediaPlayerWrapper
  .media-player-inner
  div {
  margin: auto;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .externalMediaPlayerWrapper
  .media-player-inner
  div
  div {
  @apply pb-0;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .external-display-link-wrapper {
  @apply h-full m-0 p-2;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-1 {
  @apply p-0;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-1
  .all-webcam-wrapper-inner {
  display: flex !important;
  @apply flex-wrap items-center;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-1
  .all-webcam-wrapper-inner
  .video-camera-item {
  @apply h-[45%];
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-2 {
  @apply p-0;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-2
  .all-webcam-wrapper-inner {
  display: flex !important;
  @apply flex-wrap items-center;
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-2
  .all-webcam-wrapper-inner
  .video-camera-item {
  @apply h-[45%];
}
.landscape-device.is-mobile
  #main-area.fullWidthMainArea
  .middle-fullscreen-wrapper
  .all-webcam-wrapper.vertical-webcams.total-cam-3 {
  @apply p-0;
}
/* ... */

